--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Login.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Login.cshtml
@@ -24,9 +24,9 @@
 
     <div class="az-signin-wrapper">
         <div class="az-card-signin">
-            <h1 class="az-logo">Flexigim</h1>
+            <a  asp-area="" asp-controller="Home" asp-action="Index"><h1 class="az-logo">Flexigym</h1></a> 
             <div class="az-signin-header">
-                <h2>Bienvennido</h2>
+                <h2>Bienvenido</h2>
                 <h4>Inicie sesion para continuar</h4>
 
                 <form action="@Url.Action("Index", "Home")">
