--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Registrar.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Registrar.cshtml
@@ -40,15 +40,15 @@
         <div class="az-column-signup-left">
             <div>
                 <i class="typcn typcn-chart-bar-outline"></i>
-                <h1 class="az-logo">Flexigim</h1>
+                <a  asp-area="" asp-controller="Home" asp-action="Index"><h1 class="az-logo">Flexigym</h1></a>
                 <h5>¡Desafía tus límites y supera tus metas en nuestro gimnasio!</h5>
                 <p>Nuestro gimnasio está diseñado para ofrecerte un espacio dedicado al bienestar integral. Con equipos de última generación, programas de entrenamiento personalizados y un ambiente motivador, te acompañamos en cada paso hacia tus objetivos de fitness.</p>
-                <p>Navegue por nuestro sitio y compruebe usted mismo por qué necesita Flexigim.</p>
+                <p>Navegue por nuestro sitio y compruebe usted mismo por qué necesita Flexigym.</p>
                 <a href="#" class="btn btn-outline-indigo">Leer mas</a>
             </div>
         </div>
         <div class="az-column-signup">
-            <h1 class="az-logo">Flexigim</h1>
+            <a  asp-area="" asp-controller="Home" asp-action="Index"><h1 class="az-logo">Flexigym</h1></a>
             <div class="az-signup-header">
                 <h2>Empezar</h2>
                 <h4>Registrarse es gratis y solo toma un minuto</h4>
