--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         <div class="az-header">
             <div class="container">
                 <div class="az-header-left">
-                    <a href="Index.cshtml" class="az-logo">FlexiGym</a>
+                    <a class="az-logo" asp-area="" asp-controller="Home" asp-action="Index">Flexigym</a>
                     <a href="" id="azMenuShow" class="az-header-menu-icon d-lg-none"></a>
                 </div>
                 <div class="az-header-menu">
