--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Register.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Register.cshtml
@@ -71,7 +71,7 @@
                 </form>
             </div>
             <div class="az-signup-footer">
-                <p>Ya tienes una cuenta? <a href="@Url.Action("Login", "Home")">Iniciar sesion</a></p>
+                <p>Ya tienes una cuenta?<a asp-area="" asp-controller="Home" asp-action="Login"> Iniciar sesión</a></p>
             </div>
         </div>
     </div>
