--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -72,23 +72,23 @@
                 </div>
                 <div class="az-header-right">
                     <div class="dropdown az-profile-menu">
-                        <a href="#" class="az-img-user"><img src="../img/faces/face1.jpg" alt=""></a>
+                        <a href="#" class="az-img-user"><img src="~/images/user.png" alt=""></a>
                         <div class="dropdown-menu">
                             <div class="az-dropdown-header d-sm-none">
                                 <a href="#" class="az-header-arrow"><i class="icon ion-md-arrow-back"></i></a>
                             </div>
                             <div class="az-header-profile">
                                 <div class="az-img-user">
-                                    <img src="../img/faces/face1.jpg" alt="">
+                                    <img src="~/images/user.png" alt="">
                                 </div>
-                                <h6>Aziana Pechon</h6>
+                                <h6>John Doe</h6>
                                 <span>Premium Member</span>
                             </div>
                             <a href="#" class="dropdown-item"><i class="typcn typcn-user-outline"></i> Mi Perfil</a>
                             <a href="#" class="dropdown-item"><i class="typcn typcn-edit"></i> Editar perfil</a>
                             <a href="#" class="dropdown-item"><i class="typcn typcn-time"></i> Activity Logs</a>
                             <a href="#" class="dropdown-item"><i class="typcn typcn-cog-outline"></i> Configuración de Cuenta</a>
-                            <a href="@Url.Action("Login", "Home")" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Salir</a>
+                            <a href="@Url.Action("Login", "Home")" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Iniciar sesión</a>
                         </div>
                     </div>
                 </div>
