--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                             <a href="#" class="dropdown-item"><i class="typcn typcn-edit"></i> Editar perfil</a>
                             <a href="#" class="dropdown-item"><i class="typcn typcn-time"></i> Activity Logs</a>
                             <a href="#" class="dropdown-item"><i class="typcn typcn-cog-outline"></i> Configuración de Cuenta</a>
-                            <a href="@Url.Action("Login", "Home")" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Iniciar sesión</a>
+                            <a href="@Url.Action("Login", "Login")" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Iniciar sesión</a>
                         </div>
                     </div>
                 </div>
