--- a/Proyecto_WEB/Proyecto_WEB/Views/Login/Register.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Login/Register.cshtml
@@ -3,11 +3,7 @@
     Layout = "~/Views/Shared/_LayoutExterno.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
-
-
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -16,26 +12,8 @@
         gtag('config', 'UA-90680653-2');
     </script>
 
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Responsive Bootstrap 4 Dashboard Template">
-    <meta name="author" content="BootstrapDash">
-
-    <title>Registrar</title>
-
-
-    <link href="~/pages/css/all.min.css" rel="stylesheet">
-    <link href="~/pages/ionicons/css/ionicons.min.css" rel="stylesheet">
-    <link href="~/pages/typicons.font/typicons.css" rel="stylesheet">
-
-
-    <link rel="stylesheet" href="~/pages/css/azia.css">
-
 </head>
-<body class="az-body">
-
-
+<div class="az-body">
     <div class="az-signup-wrapper">
         <div class="az-column-signup-left">
             <div>
@@ -71,22 +49,14 @@
                 </form>
             </div>
             <div class="az-signup-footer">
-                <p>Ya tienes una cuenta?<a asp-area="" asp-controller="Home" asp-action="Login"> Iniciar sesión</a></p>
+                <p>Ya tienes una cuenta?<a asp-area="" asp-controller=" Login" asp-action="Login"> Iniciar sesión</a></p>
             </div>
         </div>
     </div>
-
-    <script src="~/pages/jquery/jquery.min.js"></script>
-    <script src="~/pages/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/pages/ionicons/ionicons.js"></script>
-    <script src="~/pages/js/jquery.cookie.js" type="text/javascript"></script>
-
-    <script src="~/pages/js/azia.js"></script>
     <script>
         $(function () {
             'use strict'
-
         });
     </script>
-</body>
+</div>
 </html>
