--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_LayoutExterno.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_LayoutExterno.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,43 +9,43 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Proyecto_WEB.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="~/pages/css/all.min.css">
+    <link rel="stylesheet" href="~/pages/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="~/pages/typicons.font/typicons.css">
+    <link rel="stylesheet" href="~/pages/flag-icon-css/css/flag-icon.min.css">
+    <link rel="stylesheet" href="~/pages/css/azia.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Proyecto_WEB</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Gimnasios" asp-action="Gimnasios">Gimnasios</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Proyecto_WEB - <a asp-area="" asp-controller="Inicio" asp-action="Gimnasios">Gimnasios</a>
-        </div>
+    <footer class="main-footer">
+        <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <aside class="control-sidebar control-sidebar-dark">
+    </aside>
+    </div>
+    <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/pages/jquery/jquery.min.js"></script>
+    <script src="~/pages/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/pages/ionicons/ionicons.js"></script>
+    <script src="~/pages/jquery.flot/jquery.flot.js"></script>
+    <script src="~/pages/jquery.flot/jquery.flot.resize.js"></script>
+    <script src="~/pages/chart.js/Chart.bundle.min.js"></script>
+    <script src="~/pages/peity/jquery.peity.min.js"></script>
+    <script src="~/pages/js/azia.js"></script>
+    <script src="~/pages/js/chart.flot.sampledata.js"></script>
+    <script src="~/pages/js/dashboard.sampledata.js"></script>
+    <script src="~/pages/js/jquery.cookie.js" type="text/javascript"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+</html>
+
 </html>
