--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <h5 class="card-title">Membresías</h5>
                 <p class="card-text">Descubre nuestras opciones de membresía flexibles para adecuarse a tu estilo de vida.</p>
-                <a href="#" class="btn btn-primary">Ver opciones</a>
+                <a href="/Membresias/Index" class="btn btn-primary">Ver opciones</a>
             </div>
         </div>
     </div>
