Plan de Entrenamiento
Se agregó la sección de Plan de Entrenamiento.

--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
@@ -14,11 +14,11 @@
 <div class="row mt-5">
     <div class="col-md-4 mb-4">
         <div class="card h-80">
-            <img src="/pages/img/rutina.jpg" class="card-img-top" alt="Rutina Personalizada">
+            <img src="/pages/img/rutina.jpg" class="card-img-top" alt="Plan Personalizado">
             <div class="card-body">
-                <h5 class="card-title">Rutina Personalizada</h5>
+                <h5 class="card-title">Plan Personalizado</h5>
                 <p class="card-text">Trabajamos contigo para crear un plan de entrenamiento adaptado a tus necesidades y objetivos.</p>
-                <a href="#" class="btn btn-primary">Más información</a>
+                <a href="/PlanEntrenamiento/Index" class="btn btn-primary">Ver Plan</a>
             </div>
         </div>
     </div>
