--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     </div>
                     <ul class="nav">
                         <li class="nav-item active show">
-                            <a href="Index.cshtml" class="nav-link"><i class="typcn typcn-chart-area-outline"></i> Promociones</a>
+                            <a href="/Home/Index" class="nav-link"><i class="typcn typcn-chart-area-outline"></i> Promociones</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="nav-link with-sub"><i class="typcn typcn-document"></i> Gimnasios</a>
