--- a/Proyecto_WEB/Proyecto_WEB/Views/Login/Register.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Login/Register.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Proyecto_WEB.Models.Cliente
+
+@{
     ViewData["Title"] = "Registrar Page";
     Layout = "~/Views/Shared/_LayoutExterno.cshtml";
 }
@@ -31,25 +33,66 @@
                 <h2>Empezar</h2>
                 <h4>Registrarse es gratis y solo toma un minuto</h4>
 
-                <form action="@Url.Action("Login", "Home")">
+                <form asp-controller="Login" asp-action="Register" >
                     <div class="form-group">
-                        <label>Nombre &amp; Apellidos</label>
-                        <input type="text" class="form-control" placeholder="Ingrese su nombre y apellidos">
-                    </div>
-                    <div class="form-group">
-                        <label>Correo</label>
-                        <input type="text" class="form-control" placeholder="Ingrese su corrreo">
+                        <label>Nombre de usuario</label>
+                        <input asp-for="Username" type="text" class="form-control" placeholder="Ingrese su nombre de usuario" required>
                     </div>
                     <div class="form-group">
                         <label>Contraseña</label>
-                        <input type="password" class="form-control" placeholder="Ingrese se contraseña">
+                        <input asp-for="Contrasenna" type="password" class="form-control" placeholder="Ingrese se contraseña" required>
                     </div>
-                    <button class="btn btn-az-primary btn-block">Crear cuenta</button>
+                    <div class="form-row pt-4">
+                        <div class="col">
+                            <label>Nombre</label>
+                            <input asp-for="Nombre" type="text" class="form-control" placeholder="Ingrese su nombre" required>
+                        </div>
+                        <div class="col">
+                            <label>Apellidos</label>
+                            <input asp-for="Apellidos" type="text" class="form-control" placeholder="Ingrese sus apellidos" required>
+                        </div>
+                    </div>
+                    <div class="form-row pt-2">
+                        <div class="col">
+                            <label>Fecha de nacimiento</label>
+                            <input asp-for="FechaNacimiento" type="date" class="form-control"  required>
+                        </div>
+                        <div class="col">
+                            <label>Genero</label>
+                            <select asp-for="Genero" class="form-select" aria-label="Default select example" required>
+                                <option value="" disabled selected>Elige una opcion</option>
+                                <option value="M">Masculino</option>
+                                <option value="F">Femenino</option>
+                                <option value="O">Otro</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row pt-2">
+                        <div class="col">
+                            <label>Correo</label>
+                            <input asp-for="Email" type="email" class="form-control" placeholder="Ingrese su corrreo" required>
+                        </div>
+                        <div class="col">
+                            <label>Teléfono</label>
+                            <input asp-for="Telefono" type="number" class="form-control" placeholder="Ingrese su numero de teléfono" required>
+                        </div>
+                    </div>
+                    <div class="form-group pt-2 pb-4">
+                        <label>Dirección</label>
+                        <textarea asp-for="Direccion" type="email" class="form-control" placeholder="Ingrese su dirección" required> </textarea>
+                    </div>
 
+                    <button class="btn btn-az-primary btn-block">Crear cuenta</button>
+                    @{
+                        if (ViewBag.Mensaje != null)
+                        {
+                            <div class="alert alert-secondary text-center pt-2">@ViewBag.Mensaje</div>
+                        }
+                    }
                 </form>
             </div>
             <div class="az-signup-footer">
-                <p>Ya tienes una cuenta?<a asp-area="" asp-controller=" Login" asp-action="Login"> Iniciar sesión</a></p>
+                <p>Ya tienes una cuenta?<a asp-area="" asp-controller="Login" asp-action="Login"> Iniciar sesión</a></p>
             </div>
         </div>
     </div>
