--- a/Proyecto_WEB/Proyecto_WEB/Views/Empleado/RegEmpleados.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Empleado/RegEmpleados.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Proyecto_WEB.Models.Empleado
-
+@{
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+}
 <h1>Registrar Empleado</h1>
 
 <form asp-action="RegEmpleados" method="post">
