--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 
-<div class="row mt-5">
+@* <div class="row mt-5">
     <div class="col-md-6 mb-4">
         <div class="card h-80">
             <img src="/pages/img/registrar_empleado.jpg" class="card-img-top" alt="Registrar Empleado">
@@ -67,4 +67,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
