--- a/Proyecto_WEB/Proyecto_WEB/Views/Login/Login.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Login/Login.cshtml
@@ -8,7 +8,7 @@
 <div class="az-body">
     <div class="az-signin-wrapper">
         <div class="az-card-signin">
-            <a  asp-area="" asp-controller="Home" asp-action="Index"><h1 class="az-logo">Flexigym</h1></a> 
+            <a asp-area="" asp-controller="Home" asp-action="Index"><h1 class="az-logo">FlexiGym</h1></a>
             <div class="az-signin-header">
                 <h2>Bienvenido</h2>
                 <h4>Inicie sesión para continuar</h4>
@@ -24,6 +24,12 @@
                     </div>
                     <button type="submit" class="btn btn-az-primary btn-block">Iniciar sesión</button>
                 </form>
+                @{
+                    if (ViewBag.Mensaje != null)
+                    {
+                        <div class="alert alert-secondary text-center pt-2">@ViewBag.Mensaje</div>
+                    }
+                }
             </div>
             <div class="az-signin-footer">
                 <p><a asp-area="" asp-controller="Login" asp-action="Recovery">Olvido su contraseña?</a></p>
