--- a/Proyecto_WEB/Proyecto_WEB/Views/Empleado/ListEmpleados.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Empleado/ListEmpleados.cshtml
@@ -30,11 +30,11 @@ else
                 <tr>
                     <td>@empleado.Nombre</td>
                     <td>@empleado.Apellidos</td>
-                    <td>@empleado.FechaNacimiento.ToShortDateString()</td>
+                    <td>@empleado.FechaNacimiento?.ToShortDateString() ?? "N/A"</td>
                     <td>@empleado.Telefono</td>
                     <td>@empleado.Email</td>
                     <td>@empleado.Direccion</td>
-                    <td>@empleado.FechaContratacion.ToShortDateString()</td>
+                    <td>@empleado.FechaContratacion?.ToShortDateString() ?? "N/A"</td>
                     <td>@empleado.CargoID</td>
                     <td>@empleado.UsuarioID</td>
                 </tr>
