Lista Plan Entrenamiento Individual
Se solucionó el problema que evitaba que cada usuario pueda ver su plan de entrenamiento individual

--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
@@ -18,11 +18,7 @@
             <div class="card-body">
                 <h5 class="card-title">Plan Personalizado</h5>
                 <p class="card-text">Trabajamos contigo para crear un plan de entrenamiento adaptado a tus necesidades y objetivos.</p>
-                @{
-                    var usuarioId = User.FindFirst("UserId")?.Value;
-                }
-                <a href="@Url.Action("PlanUsuario", "PlanEntrenamiento", new { usuarioId = usuarioId })" class="btn btn-primary">Ver Plan</a>
-
+                <a href="@Url.Action("PlanUsuario", "PlanEntrenamiento")" class="btn btn-primary">Ver Plan</a>
             </div>
         </div>
     </div>
