Progreso de Usuarios
Se añadió la funcionalidad de progreso del usuario

--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/pages/typicons.font/typicons.css">
     <link rel="stylesheet" href="~/pages/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" href="~/pages/css/azia.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -50,10 +51,10 @@
                             </nav>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Clase")" class="nav-link"><i class="typcn typcn-chart-bar-outline"></i> Clases</a>
+                            <a href="@Url.Action("Index", "Clase")" class="nav-link"><i class="fas fa-chalkboard"></i> Clases</a>
                         </li>
                         <li class="nav-item">
-                            <a href="form-elements.html" class="nav-link"><i class="typcn typcn-chart-bar-outline"></i> Tu espacio</a>
+                            <a href="@Url.Action("ListaProgreso", "Progreso")" class="nav-link"><i class="typcn typcn-chart-bar-outline"></i> Tu Progreso</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="nav-link with-sub"><i class="typcn typcn-book"></i> Observaciones</a>
